--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/emcrald/JaxConvert#readme",
   "dependencies": {
     "express": "^4.21.1",
+    "jaxconvert": "file:",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.33.5"
   }
